--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h2 {
 }
 
 .task-input {
-    width: 12rem;
+    width: 20rem;
     padding: 1rem;
     border: 1px solid grey;
     outline: none;
@@ -182,8 +182,13 @@ h2 {
     font-size: 1.2rem;
 }
 
+.task-undo-button {
+    color: rgb(87, 87, 248);
+    font-size: 1.2rem;
+}
+
 .task-delete-button {
-    color: red;
+    color: rgb(251, 45, 45);
     font-size: 1.2rem;
 }
 
